--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 Django==4.1.7
+requests~=2.28.2
+pip~=23.1.2
+attrs~=22.2.0
+wheel~=0.40.0
+Jinja2~=3.1.2
+keyring~=23.13.1
+setuptools~=67.7.2
+packaging~=23.0
+zipp~=3.13.0
